--- a/css/styles.css
+++ b/css/styles.css
@@ -297,7 +297,7 @@ button {
   background-color: var(--dark);
 }
 .footer-logo {
-  display: block;
+  display: inline-block;
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
